--- a/banner.css
+++ b/banner.css
@@ -1,5 +1,5 @@
 .banner {
-	background-image: linear-gradient(-225deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.1) 50%),url("../../images/background.jpeg");
+	background-image: linear-gradient(-225deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.1) 50%),url("background.jpeg");
 	color: white;
 	padding: 200px 0px;
 	background-size: cover;
