--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a {
   justify-content: space-between;
   padding: 20px;
   flex-direction: column;
-  height:;
+  height:10px;
 }
 
 .product img {
