--- a/style.css
+++ b/style.css
@@ -27,9 +27,10 @@ a {
   display: flex;
   align-items: center;
   box-shadow: 0 30px 50px rgba(0,0,0,0.1);
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px;
   flex-direction: column;
+  text-align: center;
   height:10px;
 }
 
@@ -51,12 +52,6 @@ a {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap:20px;
   padding: 40px 20px;
-}
-
-.product{
-  flex-basis: 250px;
-  flex-grow: 1;
-  margin: 10px;
 }
 
 .logo {
