--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a {
   text-decoration: none;
 }
 
-.product {
+.product-cointainer {
   display: flex;
   align-items: center;
   box-shadow: 0 30px 50px rgba(0,0,0,0.1);
@@ -34,7 +34,7 @@ a {
   height:10px;
 }
 
-.product img {
+.product-card img {
   width: 150px;
   border-radius: 8px;
   margin-bottom: 15px;
@@ -47,7 +47,7 @@ a {
   margin-bottom: 10px;
 }
 
-.products {
+.product-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap:20px;
