--- a/style.css
+++ b/style.css
@@ -29,9 +29,11 @@ a {
   box-shadow: 0 30px 50px rgba(0,0,0,0.1);
   justify-content: center;
   padding: 20px;
+  flex-wrap: wrap;
   flex-direction: column;
   text-align: center;
   height:10px;
+  gap: 20px;
 }
 
 .product-card img {
