--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@ a {
   margin-bottom: 10px;
 }
 
-.product-container {
+.product-card {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap:20px;
   padding: 40px 20px;
+  flex: 1 1 calc(25% - 20px);
+  box-sizing: border-box;
 }
 
 .logo {
